force-app/main/default/objects/Media_Item__c/Media_Item__c.object-meta.xml
<CustomObject>
    <description
  >An item presented in a Media Channel, such as a blog post, conference presentation, or podcast episode.</description>
    <label>Media Item</label>
    <nameField>
        <displayFormat>MI-{00000}</displayFormat>
        <label>Media Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Media Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>