force-app/main/default/objects/Media_Item__c/fields/Asset_URL__c.field-meta.xml
<CustomField>
    <fullName>Asset_URL__c</fullName>
    <inlineHelpText>The URL for assets used to prepare this Media Item, such as a slides link.</inlineHelpText>
    <label>Asset URL</label>
    <type>Url</type>
</CustomField>