force-app/main/default/objects/Media_Item__c/fields/Attendance__c.field-meta.xml
<CustomField>
    <fullName>Attendance__c</fullName>
    <inlineHelpText
  >The number of persons who attended the live presentation of a Media Item, such as a conference talk.</inlineHelpText>
    <label>Attendance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>