force-app/main/default/objects/Media_Item__c/fields/CSAT_Score__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Score__c</fullName>
    <inlineHelpText>The Customer Satisfaction score for this Media Item.</inlineHelpText>
    <label>CSAT Score</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>