force-app/main/default/objects/Media_Item__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <inlineHelpText>The end date of the media item, if applicable.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>