force-app/main/default/objects/Media_Item__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <inlineHelpText>If the media item has a duration (such as a talk), the end time.</inlineHelpText>
    <label>End Time</label>
    <type>Time</type>
</CustomField>