force-app/main/default/objects/Media_Item__c/fields/Media_Channel__c.field-meta.xml
<CustomField>
    <fullName>Media_Channel__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>The Media Channel to which this Media Item is submitted.</inlineHelpText>
    <label>Media Channel</label>
    <referenceTo>Media_Channel__c</referenceTo>
    <relationshipLabel>Media Items</relationshipLabel>
    <relationshipName>Media_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>