force-app/main/default/objects/Media_Item__c/fields/Published_Media_URL__c.field-meta.xml
<CustomField>
    <fullName>Published_Media_URL__c</fullName>
    <inlineHelpText>The URL for the published Media Item, such as a link to a blog post or video.</inlineHelpText>
    <label>Published Media URL</label>
    <type>Url</type>
</CustomField>