force-app/main/default/objects/Media_Item__c/fields/Quip_Document_URL__c.field-meta.xml
<CustomField>
    <fullName>Quip_Document_URL__c</fullName>
    <label>Quip Document URL</label>
    <type>Url</type>
</CustomField>