force-app/main/default/objects/Media_Item__c/fields/Reception_Notes__c.field-meta.xml
<CustomField>
    <fullName>Reception_Notes__c</fullName>
    <inlineHelpText>Notes on the reception of this Media Item by the audience.</inlineHelpText>
    <label>Reception Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>