force-app/main/default/objects/Media_Item__c/fields/Start_Publication_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Publication_Date__c</fullName>
    <inlineHelpText>The start date, or initial publication date, for this media item.</inlineHelpText>
    <label>Start (Publication) Date</label>
    <type>Date</type>
</CustomField>