force-app/main/default/objects/Media_Item__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <inlineHelpText>If the media item has a duration (such as a talk), the start time.</inlineHelpText>
    <label>Start Time</label>
    <type>Time</type>
</CustomField>