force-app/main/default/objects/Media_Item__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>The status of this Media Item in the publishing pipeline.</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Media_Item_Status</valueSetName>
    </valueSet>
</CustomField>