force-app/main/default/objects/Media_Item__c/fields/Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Submission_Date__c</fullName>
    <inlineHelpText>The date on which this Media Item was submitted to its Media Channel.</inlineHelpText>
    <label>Submission Date</label>
    <type>Date</type>
</CustomField>