force-app/main/default/objects/Media_Item__c/fields/Submission_Materials_URL__c.field-meta.xml
<CustomField>
    <fullName>Submission_Materials_URL__c</fullName>
    <inlineHelpText
  >A link, such as a slides link or PDF, for the materials submitted for review by the Media Channel.</inlineHelpText>
    <label>Submission Materials URL</label>
    <type>Url</type>
</CustomField>