force-app/main/default/objects/Media_Item__c/fields/Total_Audience__c.field-meta.xml
<CustomField>
    <fullName>Total_Audience__c</fullName>
    <formula>Attendance__c +  Views__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The sum of the Attendance and Views for this Media Item.</inlineHelpText>
    <label>Total Audience</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>