force-app/main/default/objects/Media_Item__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>The type of Media Item this is, such as a Presentation or Article.</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Media_Type</valueSetName>
    </valueSet>
</CustomField>