force-app/main/default/objects/Media_Item__c/fields/Views__c.field-meta.xml
<CustomField>
    <fullName>Views__c</fullName>
    <inlineHelpText
  >For Media Items that are published for online consumption, the view count for the item.</inlineHelpText>
    <label>Views</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>