force-app/main/default/objects/Media_Item__c/validationRules/Start_Date_Before_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_Before_End_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Start_Publication_Date__c)),
    NOT(ISBLANK(End_Date__c)),
    Start_Publication_Date__c &gt; End_Date__c 
)</errorConditionFormula>
    <errorMessage>Start Date must be prior to End Date.</errorMessage>
</ValidationRule>