force-app/main/default/objects/Media_Item__c/validationRules/Start_Time_Before_End_Time.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Time_Before_End_Time</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK( Start_Time__c )),
    NOT(ISBLANK( End_Time__c )),
    Start_Time__c &gt; End_Time__c 
)</errorConditionFormula>
    <errorMessage>Start Time must be prior to End Time.</errorMessage>
</ValidationRule>