force-app/main/default/objects/Media_Item__c/listViews/All_Open_Media_Items.listView-meta.xml
<ListView>
    <fullName>All_Open_Media_Items</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Type__c</columns>
    <columns>Media_Channel__c</columns>
    <columns>Start_Publication_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>In Development,Internal Review,Submitted,In Revision,Accepted</value>
    </filters>
    <label>All Open Media Items</label>
</ListView>